# 2025-ectf-uiuc

./: .gitignore  README.md  rust-toolchain.toml  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml  ci-python.yml
common/: Cargo.toml
common/src/: de.rs  error.rs  lib.rs  obj.rs  ser.rs
decoder/: Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  flake.nix  memory.dev.x  memory.prod.x  memory.x  openocd.gdb  rust-toolchain.toml
decoder/ascon/: .gitattributes
decoder/ascon-sys/: Cargo.toml  build.rs
decoder/ascon-sys/include/: randombytes.h
decoder/ascon-sys/src/: lib.rs
decoder/common/: Cargo.toml  README.md
decoder/common/src/: constants.rs  crypto.rs  lib.rs  secrets.rs
decoder/firmware-builder/: Cargo.toml  Makefile.toml  README.md
decoder/firmware-builder/src/: main.rs
decoder/max78000/: Cargo.toml  Makefile.toml  build.rs  memory.x  openocd.gdb
decoder/max78000/src/: crypto.rs  decode.rs  frame.rs  hardening.rs  host_driver.rs  main.rs  rng.rs  subscription.rs  tmr.rs
decoder/src/: host_driver.rs  main.rs
design/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.py
design/ectf25_design/: Cargo.toml  pyproject.toml
design/ectf25_design/python/ectf25_design/: __init__.py  encoder.py  gen_secrets.py  gen_subscription.py
design/ectf25_design/src/: crypto.rs  lib.rs  main.rs
design/src/: lib.rs  main.rs
design/wheels/: ectf25_design-0.1.0+uiuc-cp311-cp311-macosx_10_12_x86_64.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-macosx_11_0_arm64.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-manylinux_2_17_armv7l.manylinux2014_armv7l.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-manylinux_2_17_ppc64le.manylinux2014_ppc64le.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-manylinux_2_17_s390x.manylinux2014_s390x.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-manylinux_2_5_i686.manylinux1_i686.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-musllinux_1_2_aarch64.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-musllinux_1_2_armv7l.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-musllinux_1_2_i686.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-musllinux_1_2_x86_64.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-win32.whl  ectf25_design-0.1.0+uiuc-cp311-cp311-win_amd64.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-macosx_10_12_x86_64.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-macosx_11_0_arm64.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-manylinux_2_17_armv7l.manylinux2014_armv7l.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-manylinux_2_17_ppc64le.manylinux2014_ppc64le.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-manylinux_2_17_s390x.manylinux2014_s390x.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-manylinux_2_5_i686.manylinux1_i686.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-musllinux_1_2_aarch64.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-musllinux_1_2_armv7l.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-musllinux_1_2_i686.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-musllinux_1_2_x86_64.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-win32.whl  ectf25_design-0.1.0+uiuc-cp312-cp312-win_amd64.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-macosx_10_12_x86_64.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-macosx_11_0_arm64.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-manylinux_2_17_armv7l.manylinux2014_armv7l.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-manylinux_2_17_ppc64le.manylinux2014_ppc64le.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-manylinux_2_17_s390x.manylinux2014_s390x.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-manylinux_2_5_i686.manylinux1_i686.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-musllinux_1_2_aarch64.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-musllinux_1_2_armv7l.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-musllinux_1_2_i686.whl  ectf25_design-0.1.0+uiuc-cp313-cp313-musllinux_1_2_x86_64.whl  (+10 more)
docs/: 1-introduction.md  2-security.md  3-functional-requirements.md  4-security-requirements.md  Dockerfile  Makefile  README.md  shell.nix  sigpwny-theme.tex
docs/md/: 1-introduction.md  2-secrets.md  2-security.md
