[package]
name = "common"
authors = ["SIGPwny <hello@sigpwny.com>"]
edition = "2021"
publish = false

# TODO
[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.138", optional = true }

[features]
default = []
std = ["serde_json"]