[package]
name = "common"
authors = ["SIGPwny <hello@sigpwny.com>"]
edition = "2021"
publish = false

# TODO
[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive", "serde"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["kmac", "sha3"] }
