[package]
name = "decoder"
authors = ["SIGPwny <hello@sigpwny.com>"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
ascon-aead = { version = "0.4.2", default-features = false, features = ["zeroize"] }
common = { path = "../common" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["set-sp", "set-vtor"] }
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
max7800x-hal = "0.7.0"
panic-halt = "1.0.0"
rand = { version = "0.9.0", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["kmac", "sha3"]}

[features]
no-bootloader = [] # Builds the firmware to run directly from flash without the eCTF bootloader
