[package]
name = "ectf25-design"
version = "0.1.0+uiuc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ectf25_design"
crate-type = ["cdylib"]

[dependencies]
common = { path = "../../decoder/common" }
pyo3 = "0.23.3"
rand = "0.9.0"
serde_json = "1.0.138"
serde = "1.0.217"
hmac = "0.12"  # HMAC library
sha3 = "0.10"  # SHA-256/SHA-512 hashing
ascon-aead = "0.4.2"  # Ascon AEAD implementation
crypto-common = "0.1.6"
