[package]
name = "ectf25-design"
version = "0.1.0+uiuc"
edition = "2021"

[lib]
name = "ectf25_design"
crate-type = ["cdylib"]

[dependencies]
ascon-aead = "0.4.2"
bincode = "2.0.0-rc.3"
common = { path = "../../decoder/common" }
pyo3 = "0.24.1"
rand = "0.9.0"
serde_json = "1.0.138"
serde = "1.0.217"
